# egpt-grpc

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: ci-cd.yml
proto/: messages.proto  replies.proto  users.proto
sql/: 01-migrate.sql
src/: main.rs
src/app/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/err/: mod.rs
src/grpc/: mod.rs
src/metrics/: mod.rs
src/models/: messages.rs  mod.rs  replies.rs  users.rs
src/server/: mod.rs
src/services/: messages.rs  mod.rs  replies.rs  users.rs
