[package]
name = "egpt-grpc"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "signal"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
h2 = "0.3.21"
prost = "0.12.1"
tokio-stream = "0.1.14"
tonic = "0.10.0"
metrics-exporter-prometheus = "0.12.1"
metrics = "0.21.1"
metrics-util = "0.15.1"
prost-types = "0.12.1"

[build-dependencies]
tonic-build = "0.10.0"
